--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -4,7 +4,9 @@
   "license": "Apache-2.0",
   "author": "foxleigh81 <alex@alexfoxleigh.com>",
   "dependencies": {
+    "@types/dotenv": "^8.2.0",
     "@types/expired-storage": "^1.0.0",
+    "dotenv": "^8.2.0",
     "expired-storage": "^1.0.2",
     "typescript": "^3.8.3"
   }
