--- a/packages/config/tsconfig.json
+++ b/packages/config/tsconfig.json
@@ -1,30 +1,7 @@
 {
+  "extends": "../../tsconfig.json",
+
   "compilerOptions": {
-    "outDir": "build",
-    "module": "commonjs",
-    "esModuleInterop" : true,
-    "target": "es6",
-    "lib": ["es5", "es6", "es7", "es2017", "dom"],
-    "sourceMap": true,
-    "allowJs": false,
-    "jsx": "react",
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "rootDirs": ["src"],
-    "baseUrl": "src",
-    "forceConsistentCasingInFileNames": true,
-    "noImplicitReturns": true,
-    "noImplicitThis": true,
-    "noImplicitAny": true,
-    "strictNullChecks": true,
-    "suppressImplicitAnyIndexErrors": true,
-    "noUnusedLocals": true,
-    "declaration": false,
-    "allowSyntheticDefaultImports": true,
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true
-  },
-  "include": ["./**/*"],
-  "exclude": ["node_modules"],
-  "files": ["typings.d.ts"]
+    "baseUrl": "./",
+  }
 }
