--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,12 +1,31 @@
 {
   "compilerOptions": {
+    "outDir": "build",
     "module": "commonjs",
-    "target": "es5",
-    "sourceMap": true
+    "esModuleInterop" : true,
+    "target": "es6",
+    "lib": ["es5", "es6", "es7", "es2017", "dom"],
+    "sourceMap": true,
+    "allowJs": false,
+    "jsx": "react",
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "rootDirs": ["src"],
+    "forceConsistentCasingInFileNames": true,
+    "noImplicitReturns": true,
+    "noImplicitThis": true,
+    "noImplicitAny": true,
+    "strictNullChecks": true,
+    "suppressImplicitAnyIndexErrors": true,
+    "noUnusedLocals": true,
+    "declaration": false,
+    "allowSyntheticDefaultImports": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true
   },
-
-  "exclude": [
-    "node_modules",
-    "dist"
+  "exclude": ["node_modules", "build", "scripts", "jest/config", "packages/components/src/local/mapping-grid-layer"],
+  "files": [
+    "packages/components/typings.d.ts",
+    "packages/config/typings.d.ts",
   ]
 }
