--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "component-build": "lerna run build --scope @serge/components --stream",
     "component-dev": "yarn component-build & lerna run watch --parallel --scope @serge/components",
     "diff": "lerna diff",
-    "heroku-postbuild": "yarn build",
+    "heroku-postbuild": "yarn build && pwd && ls packages/client/build/storybook",
     "serge": "yarn start-server",
     "snyk-protect": "export NODE_OPTIONS=–max_old_space_size=8192 snyk protect",
     "prepare": "yarn run snyk-protect",
