--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "lerna": "^3.16.4",
     "npm-run-all": "^4.1.5",
+    "pre-commit": "^1.2.2",
     "snyk": "^1.298.1"
   },
   "scripts": {
@@ -34,9 +35,14 @@
     "serge": "yarn start-server",
     "snyk-protect": "export NODE_OPTIONS=–max_old_space_size=8192 snyk protect",
     "prepare": "yarn run snyk-protect",
-    "version-patch" : "lerna version patch",
-    "version-minor" : "lerna version minor",
-    "version-major" : "lerna version major"
+    "version-patch": "lerna version patch",
+    "version-minor": "lerna version minor",
+    "version-major": "lerna version major",
+    "pre-commit-msg": "echo 'Performing pre-commit checks...'"
   },
+  "pre-commit": [
+    "pre-commit-msg",
+    "lint"
+  ],
   "snyk": true
 }
