--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "workspaces": [
     "packages/*"
   ],
+  "pre-commit": [ "precommit-msg", "lint" ],
   "dependencies": {
     "lerna": "^3.16.4",
     "npm-run-all": "^4.1.5",
@@ -38,11 +39,7 @@
     "version-patch": "lerna version patch",
     "version-minor": "lerna version minor",
     "version-major": "lerna version major",
-    "pre-commit-msg": "echo 'Performing pre-commit checks...' && exit 0"
+    "precommit-msg": "echo 'Performing pre-commit checks...' && exit 0"
   },
-  "pre-commit": [
-    "pre-commit-msg",
-    "lint"
-  ],
   "snyk": true
 }
