--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
   "workspaces": [
     "packages/*"
   ],
-  "pre-commit": [ "precommit-msg", "lint" ],
+  "pre-commit": [
+    "precommit-msg",
+    "lint"
+  ],
   "dependencies": {
+    "husky": "^4.2.5",
     "lerna": "^3.16.4",
     "npm-run-all": "^4.1.5",
-    "pre-commit": "^1.2.2",
     "snyk": "^1.298.1"
   },
   "scripts": {
