--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   ],
   "husky": {
     "hooks": {
-      "pre-push": "yarn precommit-msg && yarn lint && yarn test"
+      "pre-push": "yarn precommit-msg && yarn lint && yarn test-unit"
     }
   },
   "dependencies": {
