--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -15,8 +15,8 @@
     "test:unit": "jest --coverage",
     "lint": "run-p lint:*",
     "lint:ts": "eslint --fix src/**/*.ts*",
-    "lint:styles": "stylelint src/**/*.scss",
-    "build-storybook": "build-storybook -s ./static -c .storybook -o .out"
+    "lint:styles": "stylelint --fix src/**/*.scss",
+    "build-storybook": "build-storybook -s ./static -c .storybook -o ../client/build/storybook"
   },
   "dependencies": {
     "@babel/core": "^7.8.4",
