--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -5,7 +5,7 @@
   "author": "foxleigh81 <alex@alexfoxleigh.com>",
   "main": "build/index.js",
   "scripts": {
-    "storybook": "start-storybook -s ./static",
+    "storybook": "start-storybook -s ./static -p 6611",
     "build": "rimraf build && yarn copy && tsc && yarn cleanup",
     "watch": "yarn tsc --watch",
     "copy": "copyfiles -u 1 -e src/**/*.ts* -e src/**/*.md src/**/*.* build",
