--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -3,12 +3,15 @@
   "version": "0.3.0",
   "license": "Apache-2.0",
   "author": "foxleigh81 <alex@alexfoxleigh.com>",
-  "main": "index.ts",
+  "main": "build/index.js",
   "dependencies": {
     "@types/dotenv": "^8.2.0",
     "@types/expired-storage": "^1.0.0",
     "dotenv": "^8.2.0",
     "expired-storage": "^1.0.2",
     "typescript": "^3.8.3"
+  },
+  "scripts": {
+    "build" : "tsc"
   }
 }
