--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -10,6 +10,8 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "@json-editor/json-editor": "^1.3.5",
     "@serge/components": "0.3.0",
+    "@serge/config": "0.3.0",
+    "@serge/helpers": "0.3.0",
     "@serge/themes": "0.3.0",
     "bootstrap": "^4.3.1",
     "check-types": "^8.0.1",
