--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "lint": "lerna run lint --stream",
     "storybook": "lerna run storybook --scope @serge/components --stream",
     "build-storybook": "lerna run build-storybook --scope @serge/components --stream",
-    "build": "lerna run build --scope @serge/components --scope @serge/client --stream",
+    "build": "lerna run build --scope @serge/components --scope @serge/client --scope @serge/config --scope @serge/helpers --stream",
     "pkg-build": "lerna run start --scope @serge/executable --stream",
     "component-build": "lerna run build --scope @serge/components --stream",
     "component-dev": "yarn component-build & lerna run watch --parallel --scope @serge/components",
