--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -13,6 +13,10 @@
     "@serge/config": "0.3.0",
     "@serge/helpers": "0.3.0",
     "@serge/themes": "0.3.0",
+    "@types/jest": "^25.2.3",
+    "@types/node": "^14.0.4",
+    "@types/react": "^16.9.35",
+    "@types/react-dom": "^16.9.8",
     "bootstrap": "^4.3.1",
     "check-types": "^8.0.1",
     "classnames": "^2.2.6",
